--- a/My_splitter.ipynb
+++ b/My_splitter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "@inputter\n",
-    "def Splitter(testo):\n",
+    "def splitter(testo):\n",
     "\n",
     "    from string import whitespace as whs, punctuation as pct \n",
     "\n",
@@ -109,7 +109,34 @@
     }
    ],
    "source": [
-    "Splitter()"
+    "splitter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Inserisci testo o nome file:  C:\\Users\\wince\\Desktop\\Nuovo documento di testo.txt\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['ciiaoooo', 'come', 'stai', 'volevo', 'solo', 'fare', 'una', 'prova']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "splitter()"
    ]
   },
   {
