--- a/My_splitter.ipynb
+++ b/My_splitter.ipynb
@@ -14,7 +14,7 @@
     "    \n",
     "    def reader(*args, **kwargs):\n",
     "        \n",
-    "        testo = input('Inserisci testo o nome file: ')\n",
+    "        testo = input(\"Type the text or file's path\")\n",
     "        \n",
     "        #tries to pass the file path, otherwise passes the input string\n",
     "        try:\n",
